# learning-opengl

./: CMakeLists.txt  CMakeSettings.json  vcpkg_rf.txt
include/: camera.hpp  font.hpp  mesh.hpp  model.hpp  shader.hpp  texture.hpp
shaders/: c_fragment.glsl  c_vertex.glsl  depth_testFS.glsl  depth_testVS.glsl  fragment.glsl  l_fragment.glsl  model_loadfs.glsl  model_loadvs.glsl  text.frag  text.vert  vertex.glsl
shaders/HDR/: hdr.frag  hdr.vert  normal.frag  normal.vert
shaders/advanced_lighting/: specular.frag  specular.vert
shaders/antialiasing/: antialiasingVS.glsl
shaders/blending/: blendingFS.glsl  blendingVS.glsl
shaders/bloom/: bloom.frag  hdr.frag  light.frag  light.vert  normal.frag  normal.vert
shaders/deferred_shading/: g_buffer.frag  g_buffer.vert  light_box.frag  light_box.vert  postprocessing.frag  postprocessing.vert
shaders/framebuffer/: framebufferFS.glsl  framebufferVS.glsl
shaders/geometry/: geometryFS.glsl  geometryGS.glsl  geometryVS.glsl
shaders/glsl/: advanceFS.glsl  advanceVS.glsl
shaders/instancing/: instancingFS.glsl  instancingVS.glsl
shaders/normal_mapping/: map.frag  map.vert
shaders/parallax_mapping/: parallax.frag  parallax.vert
shaders/screen/: screenFS.glsl  screenVS.glsl
shaders/skybox/: skyboxFS.glsl  skyboxVS.glsl
shaders/stencil/: normalFS.glsl  shaderSingleColorFS.glsl  shaderSingleColorVS.glsl
shaders/uniform_buffers/: blueFS.glsl  greenFS.glsl  redFS.glsl  uniformVS.glsl  yellowFS.glsl
src/: camera.cpp  main.cpp  mesh.cpp  model.cpp  shader.cpp  texture.cpp
(+16 files in other folders)
